# myapp-menumaestro

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  storage.rs
src/components/: add-item-dialog.tsx  edit-item-dialog.tsx  icon-renderer.tsx  menu-editor.tsx  menu-preview.tsx  profile-dialog.tsx  settings-panel.tsx  sortable-menu-item.tsx
src/lib/: menu-store.ts  queryClient.ts  tauri-api.ts  theme-provider.tsx
src/pages/: home.tsx  tray-popup.tsx
src/shared/: schema.ts
